# ei-api

./: .gitignore  Dockerfile  LICENSE  README.md  ei-api.code-workspace  ei.proto  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  fastapi.yml  main.yml
ei-api/: app.py  constants.py  contracts.py  ei_utils.py  epic_research.py  full_backup.py  full_output.py  mcp_server.py  stats.py
ei-api/proto/: ei.proto.dot
ei-api/proto_old/: ei.proto
examples/: Caddyfile  docker-compose.yml
examples/json-exporter/: config.yml  prometheus.yml
helpers/: sentry_falcon.py
