[tool.poetry]
name = "ei-api"
version = "0.4.3"
description = "Egg, Inc. API"
authors = ["Aaron Carson <aaron@aaroncarson.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.1"
requests = "^2.28.1"
protobuf = "^4.21.12"
falcon = "^3.1.1"
gunicorn = "^20.1.0"
ipython = "^8.9.0"
sentry-sdk = {extras = ["falcon"], version = "^1.14.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
