[tool.poetry]
name = "ei-api"
version = "1.0.5"
description = "Egg, Inc. API"
authors = ["Aaron Carson <aaron@aaroncarson.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
protobuf = "^4.21.12"
sentry-sdk = {extras = ["fastapi"], version = "^1.14.0"}
fastapi = {extras = ["all"], version = "^0.89.1"}
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.1"
ipython = "^8.11.0"
mypy-protobuf = "^3.4.0"

[build-system]
requires = ["poetry-core==1.3.2"]
build-backend = "poetry.core.masonry.api"
